06-ALB-Ingress-Basics-Rule/03-deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-test
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
